# hse-c-algorithms

./: .gitignore  README.md  install.sh
assembler/hw1/: ast_interpreter.py  ast_parser.py  ast_validator.py  debug_main_ast.py  main.py  main_test.py  my_test_4.txt  my_test_9.txt  run.sh  test4.txt  tokenizer.py  utils.py
assembler/lection3/: README.md  cache.cpp
assembler/lection5/: bad_find.cpp  bad_find_impl.cpp
assembler/rk1/: .gitignore  README.md  common.hpp  control.res  drun.sh  indexer.cpp  queries.500.for_10k.f.txt  run.sh  searcher.cpp
assembler/sem4/: README.md  main.cpp  makefile  out
basic-c/hw1/: queries.txt  sorted_features_1.txt  sorted_queries.txt  sorted_queries_1.txt  task1.sh  task2.sh
basic-c/hw2/: 1.sh  2.sh  3.sh
basic-c/hw3/: A.c  B.c  C.c  D.c  E.c
basic-c/hw4/: A.c
basic-c/hw5/: Makefile  debug.ipynb
basic-c/hw8/: 1.c  Makefile
basic-c/hw9/: 1.c  2.c  Makefile  out
basic-cpp/hw1/: CMakeLists.txt  Makefile
basic-cpp/hw1/include/: record.hpp  req_parser.hpp  storage.hpp  string_pool.hpp
basic-cpp/hw1/src/: main.cpp  req_parser.cpp  storage.cpp  string_pool.cpp
basic-cpp/hw1/tests/: create_perf_data.py
hw1/: features.txt  task1_simple.sh  task3.sh  task4.sh
hw3/: A.c  B.c  Makefile  out
hw5/: 1.c  out
hw8/: 2.c  3.c  Makefile  out
hw9/: 3.c  4.c
sem3/: 1.c  2.c  3.c  4.c  A.c  B.c  C.c  D.c  E.c  F.c  Fka.c  H.c  I.c  K.c  L.c  M.c  Makefile  N.c  O.c  out
sem5/: A.c  B.c  C.c  out
sem7/: cool_int_arr_dup.c  cool_memmove.c  cool_memset.c  cool_str_smp.c  cool_strstr.c  out
sem9/: Makefile
(+42 files in other folders)
